p2/infra/manifest.yaml
#**************************** DEPLOYMENTS*****************************************
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator-app
  template:
    metadata:
      labels:
        app: calculator-app
    spec:
      containers:
      - name: calculator-app
        image: facinetm14/calculator-app:1.0
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etch-sketch-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: etch-sketch-app
  template:
    metadata:
      labels:
        app: etch-sketch-app
    spec:
      containers:
      - name: etch-sketch-app
        image: facinetm14/etch-sketch-app:1.6
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rock-paper-scissors-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rock-paper-scissors-app
  template:
    metadata:
      labels:
        app: rock-paper-scissors-app
    spec:
      containers:
      - name: rock-paper-scissors-app
        image: facinetm14/rock-paper-scissors-app:1.0
        ports:
        - containerPort: 80
---
#**************************** Services *****************************************
apiVersion: v1
kind: Service
metadata:
  name: etch-sketch-app-service
spec:
  selector:
    app: etch-sketch-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: calculator-app-service
spec:
  selector:
    app: calculator-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: rock-paper-scissors-app-service
spec:
  selector:
    app: rock-paper-scissors-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
#**************************** INGRESS CONFIG MAP *****************************************
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-name-based-route-ingress
spec:
 rules:  
 
  - host: app1.com   
    http:      
      paths:      
      - pathType: Prefix        
        path: "/"        
        backend:          
          service:            
            name: calculator-app-service
            port:              
              number: 80

  - host: app2.com   
    http:      
      paths:      
      - pathType: Prefix        
        path: "/"        
        backend:          
          service:            
            name: etch-sketch-app-service
            port:              
              number: 80
  - http:      
      paths:      
      - pathType: Prefix        
        path: "/"        
        backend:          
          service:            
            name: rock-paper-scissors-app-service
            port:              
              number: 80
